--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
+:root {
+    --main-text-color: rgb(140, 52, 170);
+  }
+
 .App {
-  text-align: center;
+    text-align: center;
+    overflow: hidden;
+    background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(10, 10, 10));
+    /* background-color: rgb(15, 15, 15); */
+    height: 100vh;
+    width: 100vw;
+    /* box-shadow: rgba(70, 70, 70, 0.25) 0 60vh 10vh -20vh inset; */
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    margin: 0;
+    /* padding: 0; */
+    box-sizing: border-box;
+    font-family: "Gotham Pro", sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img {
+    object-fit: cover;
 }
