--- a/src/components/Friends.css
+++ b/src/components/Friends.css
@@ -268,6 +268,10 @@
     opacity: 1;
 }
 
+.Friends .add-friend .fa-magnifying-glass {
+    z-index: 10;
+}
+
 .Friends .add-friend input {
     color: rgb(20, 20, 20);
     background-color: transparent;
