--- a/src/components/Groups.css
+++ b/src/components/Groups.css
@@ -16,6 +16,7 @@
     position: absolute;
     top: 25px;
     left: 25px;
+    filter: blur(2.5px);
 }
 
 .Groups .title i {
@@ -34,6 +35,7 @@
     margin-top: 75px;
     /* backgroundcolor: rgb(25, 25, 25); */
     overflow-y: auto;
+    filter: blur(2.5px);
 }
 
 .Groups .list-groups::-webkit-scrollbar {
@@ -123,6 +125,7 @@
     margin: 30px;
     margin-right: 45px;
     width: calc((100vw - 275px)/1.35 - 35px - 100px);
+    filter: blur(2.5px);
 }
 
 .Groups .group {
@@ -171,4 +174,39 @@
 .Groups .new-group span:hover {
     cursor: pointer;
     transform: scale(1.1);
+}
+
+.Groups .popupbackground {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: calc((100vw - 275px)/1.35 - 35px);
+    height: calc(100vh - 50px);
+}
+
+.Groups .popup {
+    position: relative;
+    height: 400px;
+    width: 500px;
+    background-color: rgb(25, 25, 25);
+    border-radius: 25px;
+}
+
+.Groups .popup .close {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    font-size: 18px;
+    height: 35px;
+    width: 35px;
+    top: 10px;
+    right: 10px;
+    border-radius: 50%;
+}
+
+.Groups .popup .close:hover {
+    cursor: pointer;
+    background-color: rgb(50, 50, 50);
 }
