--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,15 +1,14 @@
-@import url('http://fonts.cdnfonts.com/css/gotham-pro');
-@import url('https://fonts.cdnfonts.com/css/gotham');
-@import url('https://fonts.cdnfonts.com/css/sf-mono');
-
 .sidebar {
+    display: flex;
+    justify-content: center;
     position: fixed;
     left: 0;
     top: 0;
-    height: 100%;
+    height: 100vh;
     width: 275px;
-    background: rgb(30, 30, 30);
-    padding: 6px 14px;
+    /* background: rgb(30, 30, 30); */
+    background-image: linear-gradient(180deg, rgb(35, 35, 35), rgb(20, 20, 20) 75%);
+    /* padding: 6px 14px; */
     z-index: 2;
     transition: all 0.5s ease;
     
@@ -20,10 +19,11 @@
 }
 
 .sidebar .logo-details {
-    padding: 20px 0px 0px 10px;
+    top: 25px;
+    left: 25px;
     display: flex;
     align-items: center;
-    position: relative;
+    position: absolute;
     gap: 10px;
 }
 
@@ -46,7 +46,8 @@
     align-items: flex-start;
     justify-content: flex-start;
     margin: 10px;
-    height: 100%;
+    margin-top: 75px;
+    /* height: 100%; */
     gap: 20px;
     padding: 0;
 }
@@ -70,7 +71,6 @@
     font-weight: 500;
     font-size: 14px;
     color: white;
-    /* margin-bottom: 10px; */
 }
 
 .sidebar li.artists .title {
@@ -82,7 +82,6 @@
     align-items: center;
     justify-content: space-between;
     width: 225px;
-    /* background-color: rgb(30, 30, 30); */
     background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(15, 15, 15));
     gap: 5px;
     padding: 10px 15px;
@@ -164,7 +163,6 @@
     text-decoration: none;
     transition: all 0.1s ease;
     color: white;
-    /* background: rgb(10, 10, 10); */
 }
 
 .sidebar li .link-button.open .link,
@@ -264,7 +262,7 @@
     width: 235px;
     padding: 7.5px 5px 7.5px 10px;
     border-radius: 35px;
-    background-color: rgb(15, 15, 15);
+    background-color: rgb(40, 40, 40);
     color: rgb(120, 120, 120);
 }
 
@@ -334,7 +332,6 @@
 
 .sidebar .user .bottom .options span {
     display: flex;
-    /* justify-content: space-between; */
     gap: 10px;
     padding: 5px 10px;
 }
