--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,9 @@
 }
 
 .App {
+    position: fixed;
     text-align: center;
-    overflow: hidden;
+    overflow-y: hidden;
     background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(10, 10, 10));
     /* background-color: rgb(15, 15, 15); */
     height: 100vh;
