--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,8 @@
     position: fixed;
     text-align: center;
     overflow-y: hidden;
-    background-image: linear-gradient(180deg, rgb(20, 20, 20), rgb(10, 10, 10));
-    /* background-color: rgb(15, 15, 15); */
+    background-image: linear-gradient(180deg, rgb(15, 15, 15), rgb(15, 15, 15));
+    /* background-color: #121212; */
     height: 100vh;
     width: 100vw;
     /* box-shadow: rgba(70, 70, 70, 0.25) 0 60vh 10vh -20vh inset; */
