--- a/src/components/HomePage/Home.css
+++ b/src/components/HomePage/Home.css
@@ -11,12 +11,36 @@
     position: relative;
     left: 275px;
     /* background-color: rgb(30, 30, 30); */
+    width: calc(100vw - 275px);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     font-size: calc(10px + 1.75vmin);
     color: white;
+    overflow: hidden;
+    /* transition: all 0.5s; */
+}
+
+@media (min-width: 0px) {
+    .Home .center {
+        left: 0px;
+        width: 100vw
+    }
+}
+
+@media (min-width: 800px) {
+    .Home .center {
+        left: 275px;
+        width: calc(100vw - 275px);
+    }
+}
+
+@media (min-width: 1920px) {
+    .Home .center {
+        left: 15vw;
+        width: calc(100vw - 15vw);
+    }
 }
 
 .Home .center .main-page .social {
