--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -88,14 +88,30 @@
 
 .Settings .main .info div {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     gap: 10px;
 }
 
 .Settings .main .info div label {
-    font-size: 20px;
+    font-size: 18px;
+}
+
+.Settings .main .info div input {
+    border: unset;
+    font-size: 18px;
+    padding: 10px;
+    border-radius: 5px;
+    opacity: 0.75;
+}
+
+.Settings .main .info div input:focus {
+    opacity: 1;
+    outline: unset;
 }
 
 .Settings .main .accountbuttons {
+    margin-top: 20px;
     display: flex;
     gap: 30px;
     align-items: center;
